--- a/retrolambda/Dockerfile
+++ b/retrolambda/Dockerfile
@@ -1,28 +1,29 @@
 FROM ubuntu:latest
 
-WORKDIR /opt/workspace
+WORKDIR /code
 
 RUN \
   sed -i 's/# \(.*multiverse$\)/\1/g' /etc/apt/sources.list && \
   apt-get update && \
   apt-get -y upgrade && \
   apt-get install -y build-essential && \
-  apt-get install -y software-properties-common
+  apt-get install -y software-properties-common 
 
 RUN \
   apt-get update && \
-  apt-get install -y lib32gcc1 lib32ncurses5 lib32stdc++6 lib32z1 libc6-i386 curl
+  apt-get install -y lib32gcc1 lib32ncurses5 lib32stdc++6 lib32z1 libc6-i386 curl 
 
 RUN \
   add-apt-repository ppa:openjdk-r/ppa && \
   apt-get update && \
-  apt-get install -y default-jdk openjdk-7-jdk openjdk-8-jdk
+  apt-get install -y default-jdk openjdk-7-jdk openjdk-8-jdk 
 
 RUN useradd --create-home --shell /bin/bash developer
 
 ENV HOME=/home/developer
 ENV ANDROID_HOME=/home/developer/android-sdk-linux
 ENV PATH="${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools"
+ENV GRADLE_USER_HOME="${HOME}/.gradle"
 ENV GRADLE_OPTS='-Dorg.gradle.jvmargs="-Xmx3200m"'
 ENV JAVA7_HOME=/usr/lib/jvm/java-7-openjdk-amd64
 ENV JAVA8_HOME=/usr/lib/jvm/java-8-openjdk-amd64
